--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".EndGameActivity" />
         <activity android:name=".LanguageActivity" />
         <activity android:name=".StageActivity" />
-        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".MapActivity" />
+        <activity android:name=".BlackScreenActivity"></activity>
     </application>
 
 </manifest>
