--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="chrgames.decision">
 
     <application
@@ -8,20 +9,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.DisclaimerActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.LanguageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.DisclaimerActivity"/>
         <activity android:name=".activities.ChapterActivity" />
         <activity android:name=".activities.EndGameActivity" />
-        <activity android:name=".activities.LanguageActivity" />
         <activity android:name=".activities.StageActivity" />
         <activity android:name=".activities.MapActivity" />
-        <activity android:name=".activities.BlackScreenActivity"></activity>
+        <activity android:name=".activities.BlackScreenActivity"/>
     </application>
 
 </manifest>
